--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --respawn --transpile-only --exit-child --clear src/server.ts"
+    "dev:server": "tsnd --respawn --transpile-only --exit-child --clear src/server.ts",
+    "db:migrate": "tsnd ./node_modules/.bin/prisma"
   },
   "author": "alnmaurofranco",
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
@@ -16,6 +18,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.12",
+    "prisma": "^3.6.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   }
