--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --respawn --transpile-only --exit-child --clear src/server.ts",
-    "db:migrate": "tsnd ./node_modules/.bin/prisma"
+    "dev:server": "tsnd --respawn --transpile-only --exit-child --clear src/infra/http/server.ts",
+    "db:migrations": "tsnd ./node_modules/.bin/prisma migrate dev --name",
+    "db:migrate": "tsnd ./node_modules/.bin/prisma db push"
   },
   "author": "alnmaurofranco",
   "dependencies": {
