--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "alnmaurofranco",
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.12",
