--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "education-api",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/infra/http/server.ts",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --respawn --transpile-only --clear --exit-child src/infra/http/server.ts",
+    "dev:server": "tsnd --respawn --transpile-only --clear --exit-child ./src/infra/http/server.ts",
     "db:migrations": "tsnd ./node_modules/.bin/prisma migrate dev --name",
-    "db:migrate": "tsnd ./node_modules/.bin/prisma db push"
+    "db:migrate": "tsnd ./node_modules/.bin/prisma db push",
+    "generate:admin": "tsnd ./src/infra/prisma/seeds/UserAdminSeed.ts"
   },
   "author": "alnmaurofranco",
   "dependencies": {
