:rocket: finished challenge

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ PORT=3333
 JWT_SECRET_KEY="165cd5c2-5c69-11ec-8b97-d3089b54c4ae"
 
 # PRISMA
-DATABASE_URL="postgresql://docker:docker@localhost:5432/libdb?schema=public"
+DATABASE_URL="postgresql://USER:PASSWORD@localhost:5432/DBNAME?schema=public"
